Edit DashboardService, QuizService, AnnouncementService, tests