@@ -1,5 +1,6 @@
 package ua.netcracker.netcrackerquizb.service.Impl;
 
+import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,7 +17,6 @@ import java.util.List;
 
 import static ua.netcracker.netcrackerquizb.exception.MessagesForException.*;
 
-
 @Service
 public class QuizServiceImpl implements QuizService {
 
@@ -26,8 +26,13 @@ public class QuizServiceImpl implements QuizService {
     private QuizDAO quizDAO;
 
     @Override
+    public void setTestConnection() throws DAOConfigException {
+        quizDAO.setTestConnection();
+    }
+
+    @Override
     public Quiz buildNewQuiz(String title, String description, QuizType quizType, BigInteger userId)
-            throws QuizException, DAOLogicException, UserException {
+            throws QuizException, DAOLogicException {
         try {
             boolean isExist = quizDAO.existQuizByTitle(title);
 
@@ -68,7 +73,7 @@ public class QuizServiceImpl implements QuizService {
 
     @Override
     public void deleteQuiz(Quiz quiz)
-            throws QuizDoesNotExistException, DAOLogicException, UserDoesNotExistException, UserException {
+            throws QuizDoesNotExistException, DAOLogicException {
 
         Quiz quizFromDAO = quizDAO.getQuizById(quiz.getId());
         if (quizFromDAO != null) {
@@ -96,18 +101,20 @@ public class QuizServiceImpl implements QuizService {
     }
 
     @Override
-    public List<Quiz> getLastThreeCreatedQuizzes() throws QuizDoesNotExistException, DAOLogicException {
-        return quizDAO.getLastThreeCreatedQuizzes();
+    public List<Quiz> getLastCreatedQuizzes(BigInteger count) throws QuizDoesNotExistException, DAOLogicException {
+        return quizDAO.getLastCreatedQuizzes(count);
     }
 
     @Override
     public Quiz getQuizByTitle(String title)
             throws QuizDoesNotExistException, DAOLogicException, QuizException {
-        if (title.isBlank()) {
+        if (StringUtils.isBlank(title)) {
             log.error(EMPTY_TITLE);
             throw new QuizException(EMPTY_TITLE);
         }
         return quizDAO.getQuizByTitle(title);
     }
+
+
 
 }
